# validator

./: Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs  parser.rs  validator.rs
src/commands/: compile.rs  diff.rs  hash.rs  mod.rs  validate.rs
tests/: integration_tests.rs
tests/fixtures/invalid/: missing_entity.yaml  unknown_field.yaml
tests/fixtures/valid/: minimal.yaml
