[package]
name = "kanoniv"
version = "0.1.0"
edition = "2021"
authors = ["Kanoniv <oss@kanoniv.com>"]
description = "CLI for validating and compiling Kanoniv identity specifications"
license = "Apache-2.0"
repository = "https://github.com/kanoniv/validator"
homepage = "https://oss.kanoniv.com"
keywords = ["identity", "resolution", "validation", "yaml"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
jsonschema = "0.18"
sha2 = "0.10"
colored = "2"
thiserror = "1"
anyhow = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[lib]
name = "kanoniv_core"
path = "src/lib.rs"

[[bin]]
name = "kanoniv"
path = "src/main.rs"
